# signal-handler

./: .clang-format  .gitignore  CMakeLists.txt  CustomFunctions.cmake  PackageConfig.cmake.in  main.cpp  signal_handler.cpp  signal_handler.hpp  signalhandler.cpp  signalhandler.hpp
inc/: signal_handler.hpp
include/: signal_handler.hpp
source/: signal_handler.cpp
src/: signal_handler.cpp
